# AirRead

./: .gitignore  AUDIT_REPORT.md  AUDIT_TASK.md  CLEANUP_SUMMARY.md  FIX_PATH_PROVIDER.md  MEMORY_OPTIMIZATION.md  MNN_INTEGRATION_SUMMARY.md  MNN_SETUP_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  airread_license.py  airread_ui.xml  app.js  clean_model.dart  codes.txt  install_and_launch.sh  pubspec.yaml  ui.xml
.codebuddy/plans/: ai-companion-hud-settings-refactor_78d4edd6.md  ai-hud-adaptive-height-with-qa-fixed_90c81619.md  ai-hud-glossary-back-and-fixed-height_9b036c35.md  ai-hud-height-tiered-animated_1d90ad4a.md  ai-hud-quick-actions-redesign_5daf6ac4.md  ai-hud-redesign_b2b43056.md  airread-ai-fixes-plan_da332f21.md  fix-compilation-errors_255fa1ea.md
.tmp_mnn_build/mnn_android_arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  apply_template  build.ninja  cmake_install.cmake  embedding_demo  generateLlmIO  llm_bench  llm_demo  ppl_eval  quantize_llm  reranker_demo  rollback_demo
.tmp_mnn_build/mnn_android_arm64/express/: cmake_install.cmake
.trae/documents/: AI 设置面板 UI 重构与下载交互优化计划.md  AI伴读：本地模型接入与在线逻辑收敛改造方案.md  Flutter 本地 LLM 推理方案重构.md  MNN 本地模型集成与 UI 优化计划.md  airRead_PRD.md  airRead_Technical_Architecture.md  airRead_UI_UX_Guidelines.md  plan_20260131_054234.md  优化阅读页 AI 伴读面板切换卡顿.md  修复 AI 伴读开关联动 + 重做大模型设置 UI + 写死公共凭证.md  升级插画能力为章节分镜.md  完全迁移到 llama.cpp 计划.md  接入腾讯混元大模型（生文_翻译_对话_生图Lite_TTS）与可切换凭证设置.md  集成 MNN 框架到 iOS 本地推理.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  mnn_bridge.cpp  mnn_bridge_real.cpp  mnn_bridge_simple.cpp  sd_bridge.cpp
android/gradle/wrapper/: gradle-wrapper.properties
client/: .gitignore  pubspec.yaml
client/android/: build.gradle  gradle.properties  settings.gradle
client/android/app/: build.gradle
client/integration_test/: translation_flow_test.dart
client/ios/: .gitignore  LocalMNN.podspec  Podfile
client/ios/Flutter/: Debug.xcconfig  Release.xcconfig
client/ios/Runner/: AppDelegate.swift  Info.plist  LLMInferenceEngineWrapper.h  LLMInferenceEngineWrapper.mm  MnnLlmBridge.h  MnnLlmBridge.mm  Runner-Bridging-Header.h
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/macos/Runner.xcodeproj/: project.pbxproj
client/web/: index.html
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
docs/: nginx_cors_snippet.conf  nginx_html_site_with_api.conf
docs/nginx/: read.air-inc.top.server.conf
integration_test/: translation_flow_test.dart
ios/: LocalMNN.podspec  Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Frameworks/MNN.xcframework/: Info.plist
ios/Runner/: AppDelegate.swift  Info.plist  LLMInferenceEngineWrapper.h  LLMInferenceEngineWrapper.mm  MnnLlmBridge.h  MnnLlmBridge.mm  MnnSdBridge.h  MnnSdBridge.mm  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ai/ad/: ad_service.dart
lib/ai/config/: app_update_service.dart  auth_service.dart  checkin_service.dart  remote_config_service.dart
lib/ai/hunyuan/: hunyuan_image_client.dart  hunyuan_text_client.dart  hunyuan_translation_engine.dart
lib/ai/illustration/: illustration_item.dart  illustration_service.dart  scene_card.dart
lib/ai/licensing/: license_codec.dart
lib/ai/local_llm/: llama_cpp_client.dart  llm_client.dart  local_llm_client.dart  local_translation_engine.dart  mnn_client.dart  mnn_llm_client.dart  mnn_model_downloader.dart  model_manager.dart  ollama_client.dart  ollama_model_downloader.dart
lib/ai/local_sd/: sd_mnn_client.dart
lib/ai/manga/: manga_panel.dart  manga_service.dart
lib/ai/reading/: qa_service.dart  reading_context_service.dart
lib/ai/summarize/: summarize_service.dart
lib/ai/tencent_tts/: tencent_tts_client.dart  tts_ws.dart  tts_ws_impl.dart  tts_ws_impl_web.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
models/minicpm4-0.5b-mnn/: config.json  export_args.json  llm.mnn  llm.mnn.json  llm_config.json  tokenizer.txt
requirements/: airread_requirement.md
scripts/: build_android_aab_release.ps1  build_android_apk_arm64_release.ps1  build_config.ps1  build_ios_ipa_release.sh  build_mnn_ios_xcframework_with_diffusion.sh  build_web_release.ps1  build_web_release_ip.ps1
server/: .env.example  app.js  ecosystem.config.cjs  nginx.read.air-inc.top.conf  package.json  scf_proxy_example.py
test/: illustration_service_test.dart  opds_library_service_test.dart
tool/: hunyuan_smoke.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
(+183 files in other folders)
